--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p class = "style4"> "If you want to see your Dad alive, show your t*ts on stream, right now." </p>
         <img src = "oldWind2.png" class = "img16"/>
         <div class = "img15">
-          <iframe src="https://www.youtube.com/embed/j1YnT9Mczbk?autoplay=1&loop=1&playlist=j1YnT9Mczbk" width="1100" height="720" title="A YouTube video" frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/j1YnT9Mczbk?autoplay=true&loop=true&playlist=j1YnT9Mczbk" width="1100" height="720" title="A YouTube video" frameborder="0" allowfullscreen></iframe>
         <div>
       </div>
     </div>
