--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body style = "background: black;">
-    <audio controls autoplay hidden>
+    <audio controls autoplay preload hidden>
       <source src="romanticHomicide.m4a" type="audio/mpeg" id = "myAudio">
     </audio>
     <div class = "img">
