--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class = "img">
       <img src = "oldWind.png" class = "img1"/>
       <img src = "jadeyanh.gif" class = "img2"/>
-      <p> This is Jadenyah. Your favorite streamer! </p>
+      <p> This is JadeyNah. Your favorite streamer! </p>
     </div>
     <button onclick="openPopup()" class = "button1">CLICK</button>
     <div id="popup">
